feat : 工程初步构建
1、增加平板适配
2、导航栏分栏处理
3、增加属性动画、显示动画、关键帧动画。

--- a/StudyCollection/.hvigor/dependencyMap/Study/oh-package.json5
+++ b/StudyCollection/.hvigor/dependencyMap/Study/oh-package.json5
@@ -1,1 +1,1 @@
-{"name":"study","version":"1.0.0","description":"Please describe the basic information.","main":"","author":"","license":"","dependencies":{}}
+{"name":"study","version":"1.0.0","description":"Please describe the basic information.","main":"","author":"","license":"","dependencies":{"@pura/harmony-utils":"latest"}}
