--- a/StudyCollection/Study/oh-package.json5
+++ b/StudyCollection/Study/oh-package.json5
@@ -5,6 +5,8 @@
   "main": "",
   "author": "",
   "license": "",
-  "dependencies": {}
+  "dependencies": {
+    '@pura/harmony-utils': 'latest'
+  }
 }
 
